@@ -574,7 +574,6 @@ void __stdcall
 dll_crt0_0 ()
 {
   wincap.init ();
-  muto::init ();
   initial_env ();
 
   char zeros[sizeof (child_proc_info->zero)] = {0};
